# get-menu-outlet

./: .gitignore  API_DOCUMENTATION.md  README.md  cli.py  discord_bot.py  google_apps_script.gs  login_gofood.py  menu-bot.service  pyproject.toml  run.sh  run_discord_bot.sh  upload_to_gdrive.py
GR/grab/: main.py
data/chrome_profile/: DevToolsActivePort  Local State  first_party_sets.db
data/chrome_profile/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
data/chrome_profile/Default/DawnGraphiteCache/: data_1  index
data/chrome_profile/Default/DawnWebGPUCache/: data_1  index
data/chrome_profile/Default/Sessions/: Session_13426593940959618  Session_13426593994583196  Session_13427177984483742  Session_13427178661392577  Tabs_13426593941238535  Tabs_13426593994980063  Tabs_13427177985077442  (+1 more)
data/chrome_profile/GrShaderCache/: data_1  index
data/chrome_profile/GraphiteDawnCache/: data_1  index
data/chrome_profile/ShaderCache/: data_1  index
data/chrome_profile/profile_allvbadmin/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
data/chrome_profile/segmentation_platform/: ukm_db
menu_core/: c5_generator.py  gofood.py  grab.py  sheets.py  shopee.py
scripts/: grab_consumer_scraper.py
scripts/tests/: test_menu.py
(+146 files in other folders)
