[project]
name = "menu-outlet"
version = "1.0.0"
description = "Menu & Modifier Extractor Pipeline"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "playwright>=1.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "selenium",
    "webdriver-manager",
    "undetected-chromedriver",
    "rich",
    "filelock>=3.29.0",
    "setuptools",
]

[tool.uv]
managed = true
